[gd_scene load_steps=19 format=3 uid="uid://bsakmxjayw8p3"]

[ext_resource type="FontFile" uid="uid://c4hicsre5fbja" path="res://assets/kenvector_future_thin.ttf" id="1_737q2"]
[ext_resource type="Script" path="res://hud.gd" id="1_wij03"]
[ext_resource type="Texture2D" uid="uid://57aq6tbopbpe" path="res://assets/player_small.png" id="2_o4hp6"]
[ext_resource type="Texture2D" uid="uid://crjcd8a8auxlr" path="res://assets/play_button.png" id="3_k0x08"]
[ext_resource type="Texture2D" uid="uid://fhmc2h4stpj2" path="res://assets/shield_gold.png" id="3_o4pdu"]
[ext_resource type="Texture2D" uid="uid://6oo446u3jrsq" path="res://assets/bar_glass_200.png" id="4_l61ch"]
[ext_resource type="Texture2D" uid="uid://dt26j1gcpchdc" path="res://assets/play_button_h.png" id="4_x7hb1"]
[ext_resource type="Texture2D" uid="uid://bvi08ifyxt58u" path="res://assets/bar_green_200.png" id="5_ot7y2"]
[ext_resource type="Texture2D" uid="uid://djf55xbd75b0j" path="res://assets/energy.png" id="6_bj2yu"]
[ext_resource type="AudioStream" uid="uid://c4q38gwi8ns2j" path="res://assets/sounds/Funky-Gameplay_Looping.ogg" id="9_4dclb"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://joystick/virtual_joystick.tscn" id="11_ddyle"]
[ext_resource type="Texture2D" uid="uid://dsnsfhr2xvgf8" path="res://assets/touch_button.png" id="12_b770d"]
[ext_resource type="Texture2D" uid="uid://cpcwat660ip7v" path="res://assets/touch_button_pressed.png" id="13_cyqvd"]

[sub_resource type="LabelSettings" id="LabelSettings_tuur8"]
font = ExtResource("1_737q2")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_s3nin"]
font = ExtResource("1_737q2")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_wiuy5"]
font = ExtResource("1_737q2")
font_size = 64

[sub_resource type="CircleShape2D" id="CircleShape2D_kesst"]
radius = 60.0

[sub_resource type="LabelSettings" id="LabelSettings_khw7y"]
font = ExtResource("1_737q2")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_wij03")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="VBoxScore" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxScore"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_tuur8")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_o4pdu")
stretch_mode = 3

[node name="ShieldBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.7
texture_over = ExtResource("4_l61ch")
texture_progress = ExtResource("5_ot7y2")

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_bj2yu")
stretch_mode = 3

[node name="GunCoolDown" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 0.7
texture_over = ExtResource("4_l61ch")
texture_progress = ExtResource("5_ot7y2")

[node name="Wave" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
text = "Wave:"
label_settings = SubResource("LabelSettings_s3nin")

[node name="WaveCounter" type="Label" parent="MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "1"
label_settings = SubResource("LabelSettings_s3nin")

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_o4hp6")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_o4hp6")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
layout_mode = 2
texture = ExtResource("2_o4hp6")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -72.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Message" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Space Rock!"
label_settings = SubResource("LabelSettings_wiuy5")
horizontal_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_k0x08")
texture_hover = ExtResource("4_x7hb1")

[node name="GamePlayMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4dclb")
volume_db = -8.433
autoplay = true

[node name="ControlLeft" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Virtual Joystick" parent="ControlLeft" instance=ExtResource("11_ddyle")]
layout_mode = 2
anchors_preset = 0
offset_left = 49.0
offset_top = -180.0
offset_right = 349.0
offset_bottom = 120.0
scale = Vector2(0.465, 0.465)
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="ControlRight" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="ControlRight"]
position = Vector2(-134, -120)
texture_normal = ExtResource("12_b770d")
texture_pressed = ExtResource("13_cyqvd")
shape = SubResource("CircleShape2D_kesst")
passby_press = true
action = "shoot"
visibility_mode = 1

[node name="Label" type="Label" parent="ControlRight"]
layout_mode = 0
offset_left = -110.0
offset_top = -81.0
offset_right = -55.0
offset_bottom = -55.0
text = "Shoot"
label_settings = SubResource("LabelSettings_khw7y")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
